--- a/dark-crows/package.json
+++ b/dark-crows/package.json
@@ -10,17 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.31",
+    "@nextui-org/react": "^2.3.5",
+    "@nextui-org/skeleton": "^2.0.27",
+    "@nextui-org/slider": "^2.2.9",
+    "@nextui-org/switch": "^2.0.28",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.2",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
+    "rollup-plugin-postcss": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
