--- a/dark-crows/package.json
+++ b/dark-crows/package.json
@@ -13,7 +13,8 @@
     "@nextui-org/react": "^2.3.6",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
