--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 dark-crows/src/DummyFile.jsx
 dark-crows/package-lock.json
 dark-crows/package.json
+dark-crows/package-lock.json
+dark-crows/package.json
