--- a/dark-crows/package.json
+++ b/dark-crows/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/react": "^2.0.3",
         "@heroicons/react": "^2.1.3",
         "@nextui-org/react": "^2.3.6",
         "framer-motion": "^11.1.7",
