--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
